wordpress/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wordpress
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
   - port: 3306
     name: sql
