wordpress/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
   - port: 80
     name: http
