wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50G"
spec:
  rules:
   - host: lesquerra.cat
     http:
      paths:
       - backend:
           serviceName: wordpress
           servicePort: 80
  tls:
    - hosts:
      - lesquerra.cat
      secretName: tlssecret
